--- a/conf/configEN.json
+++ b/conf/configEN.json
@@ -1,16 +1,16 @@
-const config = {
-	"sitio": ["ITA","[UCV]","2024-1"],
+{
+	"sitio": ["ITA","[UCV]","2025-1"],
 	"home": "Home",
 	"login": "Login",
 	"copyRight":"Copyright © 2024 Computer school - ITA. All rights reserved",
-	"nombre":"Name",
+	"nombre":"Maximiliano Barboza",
 	"descripcion":"",
-	"color":"My favorite color is",
-	"libro":"My favorite book is",
-	"musica":"My favorite music style",
-	"video_juego":"Favorite video games",
-	"lenguajes":"Languages learned",
-	"email":"please send me a email to [email], if you need to contact me",
+	"color":"My favorite color is:",
+	"libro":"My favorite book is:",
+	"musica":"My favorite music style:",
+	"video_juego":"Favorite video games:",
+	"lenguajes":"Languages learned:",
+	"email":"please send me a email to, if you need to contact me",
 	"buscar": "Search",
 	"saludo": "Hi"
 }
