--- a/conf/configES.json
+++ b/conf/configES.json
@@ -1,16 +1,16 @@
-const config = {
-	"sitio": ["ATI","[UCV]","2024-1"],
+{
+	"sitio": ["ATI","[UCV]","2025-1"],
 	"home": "Inicio",
 	"login": "Entrar",
 	"copyRight":"Copyright © 2024 Escuela de computación - ATI. Todos los derechos reservados",
-	"nombre":"Nombre",
+	"nombre":"Maximiliano Barboza",
 	"descripcion":"",
-	"color":"Mi color favorito es",
-	"libro":"Mi libro favorito es",
-	"musica":"Mi estilo de música preferida",
-	"video_juego":"Vídeo juegos favoritos",
+	"color":"Mi color favorito es:",
+	"libro":"Mi libro favorito es:",
+	"musica":"Mi estilo de música preferida:",
+	"video_juego":"Vídeo juegos favoritos:",
 	"lenguajes":"Lenguajes aprendidos",
-	"email":"Si necesitan comunicarse conmigo me pueden escribir a [email]",
+	"email":"Si necesitan comunicarse conmigo me pueden escribir a:",
 	"buscar": "Buscar",
 	"saludo": "Hola"
 }
