--- a/conf/configPT.json
+++ b/conf/configPT.json
@@ -1,16 +1,16 @@
-const config = {
-	"sitio": ["ATI","[UCV]","2024-1"],
+{
+	"sitio": ["ATI","[UCV]","2025-1"],
 	"home": "Início",
 	"login": "Sessão",
 	"copyRight":"Copyright © 2024 Escola de informática - ATI. Todos os direitos reservados",
-	"nombre":"Nome",
+	"nombre":"Maximiliano Barboza",
 	"descripcion":"",
-	"color":"Minha cor favorita é",
-	"libro":"Meu livro favorito é",
-	"musica":"Meu estilo de música favorita",
-	"video_juego":"Jogos de vídeo favoritos",
-	"lenguajes":"Linguagems aprendidas",
-	"email":"Se precisar me contatar pode me escrever em [email]",
+	"color":"Minha cor favorita é:",
+	"libro":"Meu livro favorito é:",
+	"musica":"Meu estilo de música favorita:",
+	"video_juego":"Jogos de vídeo favoritos:",
+	"lenguajes":"Linguagems aprendidas:",
+	"email":"Se precisar me contatar pode me escrever em:",
 	"buscar": "Procurar",
 	"saludo": "Olá"
 }
