--- a/conf/configES.json
+++ b/conf/configES.json
@@ -9,7 +9,7 @@
 	"libro":"Mi libro favorito es:",
 	"musica":"Mi estilo de música preferida:",
 	"video_juego":"Vídeo juegos favoritos:",
-	"lenguajes":"Lenguajes aprendidos",
+	"lenguajes":"Lenguajes aprendidos:",
 	"email":"Si necesitan comunicarse conmigo me pueden escribir a:",
 	"buscar": "Buscar",
 	"saludo": "Hola"
